2002-04-10  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* Makefile (dist): Add rule.

	* mkpatch: Add file.

	* Makefile (patch): Call external mkpatch sh-script to generate
	the patch.

2002-02-14  Shawn Betts  <sabetts@vcn.bc.ca>

	* nethack-glyphs.el (nethack-glyph-vector): Add warning glyphs.

2002-02-01  Ryan C Yeske  <rcyeske@vcn.bc.ca>

	* COPYING: Add file.

	* nethack.el: Update copyright.

	* nethack-keys.el: Update copyright.

	* nethack-keys-dvorak.el: Update copyright.

	* nethack-glyphs.el: Update copyright.

	* nethack-api.el: Update copyright.

2002-02-01  Shawn Betts  <sabetts@vcn.bc.ca>

	* nethack.el (nethack-message-pre-print-hook): new hook.

	* nethack-api.el (nethack-api-putstr): run the
	nethack-message-pre-print-hook hook.

2002-02-01  Ryan C Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el (nethack-black-face, nethack-green-face) 
	(nethack-brown-face, nethack-blue-face, nethack-magenta-face) 
	(nethack-cyan-face, nethack-bright-green-face) 
	(nethack-bright-blue-face): Fix colors.

	* nethack-api.el (nethack-status-good-face)
	(nethack-status-bad-face)
	(nethack-status-neutral-face): Fix colors.

2002-01-30  Ryan C Yeske  <rcyeske@vcn.bc.ca>

	* enh-331.patch: Add file.

	* Makefile: Likewise.

	* INSTALL: Likewise.

	* BUGS: Likewise.

	* AUTHORS: Likewise.

2002-01-29  Ryan C Yeske  <rcyeske@vcn.bc.ca>

	* nethack-cmd.el (defun-nethack-command): Reformat.

	* nethack-api.el (nethack-api-update-status): Rewrite using a
	separate variable for each attribute.  Don't print the attributes
	here.  Run hooks when an attribute has changed.
	(nethack-print-status): New function.
	(nethack-status-attribute-name, nethack-status-attribute-monster) 
	(nethack-status-attribute-rank, nethack-status-attribute-St) 
	(nethack-status-attribute-Dx, nethack-status-attribute-Co) 
	(nethack-status-attribute-In, nethack-status-attribute-Wi) 
	(nethack-status-attribute-Ch, nethack-status-attribute-Align) 
	(nethack-status-attribute-Dungeon, nethack-status-attribute-Dlvl) 